# qa_guru_advanced_course

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/: main.py
app/database/: engine.py  users.py
app/routers/: users.py
clients/: StatusApi.py  UsersApi.py
config/: config.py
models/: Pagination.py
session/: BaseSession.py
tests/: clients.py  conftest.py  messages.py  test_api.py  test_create_user.py  test_delete_users.py  test_smoke.py  test_update_user.py  test_user.py  test_users.py
